<resources>
    <string name="app_name">zhixiao_SubBook</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="enter_name">Name</string>
    <string name="enter_comment">Comments</string>
    <string name="enter_fee">Monthy Charge(0000.00)</string>
    <string name="select_date">Date(YYYY-MM-DD)</string>
    <string name="sub_title">Total Monthly Charges: $0.00</string>
    <string name="save_changes">Save Changes</string>
    <string name="display_name">Name of Subscription</string>
    <string name="display_date">Start Date</string>
    <string name="display_fee">Monthly Charges</string>
    <string name="display_comment">Comments</string>
</resources>
